[package]
name = "show-simplex"
version = "0.9.0"
description = "A CLI that displays an animated simplex noise field in your terminal with ASCII"
authors = ["Neef Rehman <neef.rehman@gmail.com>"]
readme = "README.md"
repository = "https://github.com/neefrehman/show-simplex-rs"
keywords = ["generative", "creative-coding", "noise", "math", "CLI"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

[dependencies]
noise = "0.5.1"
terminal_size = "0.1.13"
schedule_recv = "0.1.0"
structopt = "0.3.13"
